<resources>
    <string name="app_name">DemoParse</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_message">Send Message</string>
    <string name="username">Username</string>
    <string name="passwoed">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="alert_wait">Please wait...</string>
    <string name="alert_loading">Loading...</string>
    <string name="not_found_user">No found user for chat</string>

</resources>
